--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist -b gh-pages --no-history"
+    "deploy": "gh-pages -d dist -b master -f"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
